scaled down .carousal text font size in screen bigger than 1200px to stop text from overflowing out of the carousal

--- a/src/App.css
+++ b/src/App.css
@@ -277,7 +277,7 @@ and (min-width : 772px) {
 }
 
 @media only screen
-and (min-width : 1200px) {
+and (min-width : 1400px) {
   .carousal-title {
     font-size: 4vw;
   }
@@ -291,7 +291,7 @@ and (min-width : 1200px) {
   }
 }
 
-@media only screen
+/* @media only screen
 and (min-width : 1600px) {
   .carousal-title {
     font-size: 3vw;
@@ -304,4 +304,4 @@ and (min-width : 1600px) {
   .carousal-p {
     font-size: 1.3vw;
   }
-}
+} */
